<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#EEE">

    <TextView
        android:id="@+id/parentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_parent"
        android:textStyle="bold"
        android:textSize="@dimen/label_text_size"
        android:padding="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parentLabel">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/spinnerLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_choose_fragment"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/chooseFragmentSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerLabel"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:entries="@array/spinner_content"/>

            <TextView
                android:id="@+id/resultLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_result"
                android:textStyle="bold"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chooseFragmentSpinner"
                />

            <TextView
                android:id="@+id/resultFromFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16sp"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resultLabel"
                />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/fragmentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_fragment"
        android:textStyle="bold"
        android:textSize="@dimen/label_text_size"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView1"
        />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentLabel">

        <FrameLayout
            android:id="@+id/fragmentContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            />

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>